<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/welcome_msg"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow>
            <TextView
                android:layout_width="match_parent"                
                android:layout_height="wrap_content"
                android:text="@string/key" />

            <EditText
                android:id="@+id/uiKeyEdit"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" >

                <requestFocus />
            </EditText>

        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/value" />

            <EditText
                android:id="@+id/uiValueEdit"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />

        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/type" />

            <Spinner
                android:id="@+id/uiTypeSpinner"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />

        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/uiGetButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_value" />

        <Button
            android:id="@+id/uiSetButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_value" />
        
    </LinearLayout>

</LinearLayout>